--- a/lib/generators/refinery/templates/config/initializers/refinery/audios.rb.erb
+++ b/lib/generators/refinery/templates/config/initializers/refinery/audios.rb.erb
@@ -1,5 +1,5 @@
 Refinery::Audios.configure do |config|
-    #Configures the maximum allowed upload size (in bytes) for an video file
+    #Configures the maximum allowed upload size (in bytes) for an audio file
     #config.max_file_size = <%#= Refinery::Audios.max_file_size %>
 
     # Configure how many Audios per page should be displayed in the list of images in the admin area
@@ -10,16 +10,10 @@ Refinery::Audios.configure do |config|
     # Configure white-listed mime types for validation
     #config.whitelisted_mime_types = <%#= Refinery::Audios.whitelisted_mime_types %>
 
-    <%# if false %>
-    # Configure skin. Put css class name to activate skin. For YouTube like skin put tubecss and add css with images to assets path.
-    # config.skin_css_class = '<%#= Refinery::Audios.skin_css_class %>'
-    <%# end %>
+    # Configure default size audio tag
+    # config.audio_default_width = '<%#= Refinery::Audios.audio_default_width %>'
 
-    # Configure default size video tag
-    # config.video_default_width = '<%#= Refinery::Audios.video_default_width %>'
-    # config.video_default_height = '<%#= Refinery::Audios.video_default_height %>'
-
-    # Configure path for video_files in public_path
+    # Configure path for audio_files in public_path
     # config.datastore_path = '<%#= Refinery::Audios.datastore_path %>'
 
 end
