--- a/app/views/refinery/audios/admin/audios/_audio.html.erb
+++ b/app/views/refinery/audios/admin/audios/_audio.html.erb
@@ -11,7 +11,7 @@
                     :title => t('select', scope: 'refinery.audios.admin.audios.insert'),
                     :remote => true %>
       </span>
-        <span class="actions" id="audio_select<%= audio.id %>" style="display: none;">
+        <span class="actions select_image" id="audio_select<%= audio.id %>" style="display: none;">
           <%= refinery_icon_tag('select_video.png') %>
         </span>
   <% else %>
