--- a/app/views/refinery/audios/admin/audios/_audio_preview.html.erb
+++ b/app/views/refinery/audios/admin/audios/_audio_preview.html.erb
@@ -1,10 +1,12 @@
-<% audio ||= nil %>
+<% audio ||= nil
+   include_javascript ||= false
+%>
 <% if audio %>
 <div class="audio_info">
   <div class="audio_title"><%= audio.get_title %></div>
-  <div class="audio_description"><%= audio.description || t('description_is_null', scope: 'refinery.audios.admin.audios.errors') %></div>
+  <div class="audio_description"><%= audio.description.to_s.blank? ? t('description_is_null', scope: 'refinery.audios.admin.audios.errors') : audio.description.to_s %></div>
 </div>
-<%= render 'show_audio', audio: audio %>
+<%= render 'show_audio', audio: audio, include_javascript: include_javascript %>
 <% else %>
     <%= render 'audio_not_found' %>
 <% end %>
