--- a/app/views/refinery/audios/admin/audios/insert.html.erb
+++ b/app/views/refinery/audios/admin/audios/insert.html.erb
@@ -35,6 +35,7 @@
           <%= render '/refinery/admin/form_actions', :f => insert_params_form,
                      :hide_cancel => false,
                      :cancel_title => t('.cancel_dialog'),
+                     :cancel_url => '#',
                      :submit_button_text => t('.append_to_wym') %>
 
       <% end %>
