--- a/app/views/refinery/audios/admin/audios/_show_audio.html.erb
+++ b/app/views/refinery/audios/admin/audios/_show_audio.html.erb
@@ -1,13 +1,13 @@
 <% audio ||= nil
    audio_width ||= 0 #Refinery::Audios.audio_default_width.to_i
-   audio_height ||= 0 #Refinery::Audios.audio_default_height.to_i
+   include_javascript ||= false
 %>
 
-<!--video tag began-->
+<%= javascript_include_tag 'refinery-audios' if include_javascript  %>
 <% if audio %>
-    <audio id="show_audio_<%= audio.id %>" class="audio-js ajs-default-skin" controls="controls" preload="true"
-           data-setup="{}" src="<%= audio.download_url %>">
+    <!--audio tag began-->
+    <audio id="show_audio_<%= audio.id %>" class="audio-js ajs-default-skin" preload="metadata" src="<%= audio.download_url %>" controls="controls">
     </audio>
+    <!--audio tag ended-->
 <% end %>
 
-<!--video tag ended-->
